--- a/loveletter.html
+++ b/loveletter.html
@@ -15,6 +15,11 @@
     <div class="notes-container">
 
         <div class="note">
+            <a href="pdf/book1.pdf" id="open-pdf">
+                <img class="book" src="img/bookcover.png" alt="မရှိခြင်းဆိုတာ အရာအားလုံးပဲ">
+            </a>
+        </div>
+        <div class="note">
             <div class="note-title mama things">- Things I Love About You -</div>
             <div class="note-body">
                 - မြင်မြင်ချင်းသဘောကျမိပြီး ကလေးဘဝမှာပင် အချစ်ဆိုတဲ့စိတ်မျိုးခဏတာ ခံစားမိစေခဲ့တာကြောင့်
@@ -52,81 +57,63 @@
         <div class="note">
             <div class="note-title mama read">- Read This When You're tired -</div>
             <div class="note-body read">
-                ဟန်နီရေ ပင်ပန်းနေပြီလား
-                အများကြီးကြိုးစားထားတာပဲ အားတင်းထားဦးလေကွာ
-                မောင်လည်း မမအနားမှာရှိနေပေးမယ်
-                မောင်ကူနိုင်တာရှိတာအကုန်ကူညီပေးမှာမလို့
-                မောင့်ကိုဖွင့်ပြောပြီးတိုင်ပင်ပေးနော်
-                ဘဝဆိုတာ မကြာခဏ ပင်ပန်းပြီး အရှုံးပေးချင်စရာကောင်းတယ်
-                ဒါမယ့် မောင်တို့တူတူနေရမယ့်အချိန်လေးတွေကိုတွေးပြီးအားတင်းထားနော်
-                ပေါ့ပေါ့ပါးပါးနဲ့ရယ်ရမယ့် ဇတ်ကားလေးရှာကြည့်(ရှာမတွေ့ရင် မောင့်ကိုလာမေး)
-                ဇာတ်ကားလေးကြည့် မုန့်လေးစားရင်း သေချာအနားယူ မမ
-                It's okay to run from everything sometimes, It's okay to take a nap.
-                It's okay to take a pause so that you can find yourself back.
-                မမကတော်ပါတယ် ဖိုက်တင်း
-                You can do it Honey...
+                ဒီရက်ပိုင်း ကျောင်းတက်ရ၊ အဘိုးကဖုန်းဆက်လို့ အပြေးလွှားပြန်ရ
+                အိမ်ရောက်တော့လည်း စာကသင်ရသေး၊ ကလေးတွေလည်းတစ်ခါတစ်လေကြည့်ပေးသေးတယ်မလား
+                အဲ့ကြားထဲ မောင့်ကိုက အချိန်ပေးရသေးတယ်။
+                မမပင်ပန်းနေပြီမလား။ ပင်ပန်းနေရောပေါ့...
+                ဖိုက်တင်းနော် မမ၊ ဘာပဲဖြစ်ဖြစ်မောင်က မမနားမှာရှိနေမှာ
+                ရှိနေပြီးချစ်ပေးနေမှာ တစ်သက်လုံး
+                ဘာကြောင့်ပဲ ပင်ပန်းပင်ပန်း မောင့်ဆီဖုန်းဆက်ပြီး အာဘွားလာတောင်း
+                မောင့်ဆီမှာ ခဏလာနား၊ မမကိုအကြာကြီးဖက်ထားပေးမယ်
+                ဖိုက်တင်း အချစ်ဆုံးလေး......
             </div>
         </div>
 
         <div class="note">
             <div class="note-title mama read">- Read This When You're Sad -</div>
             <div class="note-body read">
-                အချစ်ဆုံးလေးဝမ်းနည်းနေတာလား?
-                ဘာလို့လဲ အိမ်ကဆူလို့လား?
-                လူကြီးတွေဆိုတာအဲ့လိုပါပဲအချစ်ရယ်
-                ဆူတုန်းခဏပဲ ပြီးရင် ဘာမှမဖြစ်ထားသလိုပဲပြန်ဖြစ်သွားမှာ
-                ခဏလေးပဲ အဲ့တာကြောင့် အရမ်းကြီးဝမ်းနည်းနေနဲ့
-                မမလုပ်စရာတွေလည်းမပျက်စေနဲ့
-                သီချင်းလေးနားထောင်ရင်း လုပ်စရာတွေဆက်လုပ်...နော်။
+                မမရေ ဘာတွေဝမ်းနည်းနေတာလဲ?
+                မောင်တို့သေချာစကားမပြောဖြစ်လို့လား
+                မမလည်းကျောင်းတက်၊ မောင်လည်းအလုပ်လုပ်ဆိုရင် စကားတွေသေချာပြောဖြစ်ဖို့ခက်နေမှာပေါ့
+                အားတိုင်း မမကိုဖုန်းဆက်ပြီး smsလည်းပို့မယ်နော်
+                မမဝမ်းနည်းမနေနဲ့။
 
-                ဒါမှမဟုတ် မောင့်ကြောင့်လား?
-                မောင်က မမကိုဆူလိုက်လို့လား,မမကိုပစ်ထားလို့လား?
-                ဟေး ဟန်နီ, မမက မောင့်ဘဝမှာ အလိုချင်ဆုံးတစ်ယောက်တည်းသူနော်
-                မမကိုဆူမိရင်လည်းတောင်းပန်ပါတယ်
-                ရန်ဖြစ်ပြီးရင်လည်း မောင်ပြန်ချော့မယ်နော်
-                ဝမ်းနည်းနေနဲ့တော့ လာမောင့်ဆီပြန်လာခဲ့ အာဘွားပေးပြီးဖက်ထားမယ်
+                အိမ်ကဆူရင်လည်း မောင့်ကိုဖုန်းဆက်ပြီးတိုင်
+                သိတယ်မလား မမကောင်လေးက မမဘက်ကပဲ
+                တစ်အိမ်လုံးကိုကူပြီးရန်တွေ့ပေးမယ်
 
-                တစ်ခြားသူတွေကြောင့် ဝမ်းနည်းနေရတာဆိုရင်တော့ မောင့်ဆီပိုပြီးမြန်မြန်လေးပြေးလာခဲ့
-                နှစ်ယောင်ပေါင်းပြီး သွားကြိတ်ကြမယ်
-                အိုကေ?
+                အပြင်ကဘယ်သူဖြစ်ဖြစ်မမကိုရန်လာစရင်ပြော
+                မောင်လာကြိတ်မယ် တူတူကြိတ်ကြမယ်
+                မမ့တွက်မောင်ရှိနေတယ်နော်
             </div>
         </div>
 
         <div class="note">
             <div class="note-title mama read">- Read This When You Miss Me -</div>
             <div class="note-body read">
-                မတွေ့ရတာဘယ်နှစ်ရက်တောင်ကြာပြီလဲအချစ်?
-                မောင့်ရင်ထဲမှာတော့မမကိုသတိမရတဲ့နေ့တစ်ရက်မှမရှိပါဘူး
-                skincareတွေသုံးထား မောင်နဲ့တွေ့တဲ့ချိန်လှလှလေးဖြစ်ချင်ရင်
-                မကြာခင်ပြန်တွေ့မယ်နော်
-                မအားလည်း အားအောင်လုပ်ကြတာပေါ့
-                မောင့်ဘဝမှာ မမပဲအရေးပါတာ မောင်ကတော့ မမတွေ့ချင်တယ်ဆိုရင် ရအောင်လာတွေ့မှာပဲ
-                ပြန်တွေ့တဲ့နေ့ကြရင် မမဆီပြေးလာပြီး ဖက်ထားပေးမယ်
-                အချစ်လေးအရမ်းလွမ်းနေလို့ မောင့်ရင်ခွင်ထဲမှာငိုချင်လည်းငိုချလိုက်
-                ခေါင်းလေးကိုပွတ်ပြီးမောင်ကချော့ပေးမယ်
-                မောင့်အချစ်ဆုံးလေးကို အမြန်ဆုံးတွေ့ချင်နေပြီ...
-                အာ.......ဘွား
+                အချစ်ရေ အလုပ်တွေများပြီးမတွေ့ဖြစ်တာတော့မရှိစေရဘူးနော်
+                မောင်တို့ပြောထားသလို အပတ်တိုင်းတွေ့ကြမယ်
+                ရံဖန်ရံခါမှာ ရပ်ကွက်ထဲမှာပဲ လမ်းခဏလျှောက်ကြမယ်
+                မောင်ဖုန်းဆက်ပြီးခေါ်ရင် ရပ်ကွက်ထဲခဏပတ်သွားကြမယ်လေ
+                လွမ်းနေတာတွေပျောက်အောင် အာဘွားအများကြီးပေးပြီးမှပြန်လွှတ်မှာစိတ်ချ
+                ကဲ ချစ်ဆုံးလေး မောင့်ကိုတွေ့ချင်ရင် ခုပဲဖုန်းဆက်လိုက်တော့
+                ရက်ချိန်းကြတာပေါ့ မြန်မြန်တွေ့ရလေ ကောင်းလေပဲ
             </div>
         </div>
 
         <div class="note">
             <div class="note-title mama read">- Read This When You Mad Me -</div>
             <div class="note-body read">
-                ကဲ အသက်ကိုဖြေးဖြေးရှု,
-                မျက်နှာလေးက စူပုတ်မနေနဲ့
-                ဒီဘဲဘာတွေလုပ်ထားပြန်ပြီလဲ ငါ့မမကိုစိတ်ဆိုးအောင်
-                ပြန်တည့်သွားရင် လမ်းမကြီးမှာ မမကိုစိတ်ဆိုးအောင်မလုပ်တော့ပါဘူး အရမ်းချစ်တယ်လို့ အကျယ်ကြီးအော်ခိုင်းပစ် မမ
-                ခုတော့ စိတ်လေးလျှော့ပြီးနားထောင်ပေးနော်
-                I Love You so much Honey,
-                More than anyone and anything.
-                You're the only one I want for my whole life.
-                မောင်မမကိုစိတ်ဆိုးအောင်လုပ်မိရင်တောင်းပန်ပါတယ်
-                မမလည်းမောင့်ကိုအဆုံးရှုံးမခံနိုင်ဘူးမလား?
-                တူတူပဲလေကွာ အဲ့တာကြောင့် ပြဿနာတွေကိုအရမ်းကြီးလာတဲ့ထိမစောင့်ပဲ
-                အချိန်တိုတွင်း ငြိမ်းချမ်းရေးယူကြမယ်နော်
-                Let's not take the risk Honey
-                We can't lose each other.
-                တောင်းပန်ပါတယ် အချစ်လေးရေ ပြန်ခေါ်ကြရအောင်နော်
+                မမရေ.... တောင်းပန်ပါတယ်နော် စိတ်မကောက်ပါနဲ့တော့နော်
+                မောင်ဘာအပြစ်လုပ်မိမိတောင်းပန်ပါတယ်
+                မမကိုအဆုံးရှုံးမခံဘူးဆိုတာသိလား
+                အဲ့တာကြောင့် မလိမ်ဆိုးမလိမ်မာလေးကို ခွင့်လွှတ်လိုက်ပါနော်
+                မမဒီတိုင်းခွင့်မလွှတ်နိုင်ရင် အပြစ်တစ်ခုခုပေးကြည့်
+                မုန့်ဝယ်ပြီးလာပို့ခိုင်းတာ, မမလိုတာဝယ်လာခိုင်းတာတို့
+                အအေးလျှော့သောက်ခိုင်းတာ
+                မမပြောတာအကုန်လုပ်ပေးမယ်နော်
+                စိတ်ကောက်နဲ့တော့...
+                နော် မောင့်အချစ်ဆုံးလေးကလိမ္မာပါတယ်
             </div>
         </div>
 
@@ -686,13 +673,13 @@
         <div class="note">
             <div class="note-title mama">- မမဖတ်ဖို့ ၂၉ -</div>
             <div class="note-body">
-                ထိုင်ပါ<br>
-                ဒီသစ်ပင်ကြီးရဲ့ အရိပ်အောက်မှာ<br>
-                သစ်ကိုင်းတွေကို ပွေ့ဖက်ထားပါ<br>
-                ကောင်းကင်ပေါ်က ပျံသွားတဲ့ ငှက်တွေကို<br>
-                လက်ပြနှုတ်ဆက်လိုက်ပါ<br>
-                သစ်ရွက်တွေကို ယုယစွာနမ်းပါ<br>
-                မင်းအိမ်ရောက်ပါပြီ<br>
+                ထိုင်ပါ
+                ဒီသစ်ပင်ကြီးရဲ့ အရိပ်အောက်မှာ
+                သစ်ကိုင်းတွေကို ပွေ့ဖက်ထားပါ
+                ကောင်းကင်ပေါ်က ပျံသွားတဲ့ ငှက်တွေကို
+                လက်ပြနှုတ်ဆက်လိုက်ပါ
+                သစ်ရွက်တွေကို ယုယစွာနမ်းပါ
+                မင်းအိမ်ရောက်ပါပြီ
                 <br>19.11.2023<br>
             </div>
         </div>
@@ -700,18 +687,20 @@
         <div class="note">
             <div class="note-title mama">- မမဖတ်ဖို့ ၃၀ -</div>
             <div class="note-body">
-                ဝိုင်းစက်လှပသောတဲ့...<br>
-                အလှကိုပုံဖော်ရာမှာ ဝိုင်းစက်တာကိုသုံးကြတယ်<br>
-                နေလုံးကြီးကဝိုင်းတယ်, ထိုနည်းတူ<br>
-                လရော ကမ္ဘာရော...<br>
-                သူမရဲ့မျက်ဝန်းတွေရော<br>
-                သူမကိုယ်ပေါ်မှာကပ်တွယ်နေတဲ့ရင်နှစ်ဖိုရော<br>
-                သူမနဲ့ကျုပ်ရဲ့အရိုင်းဆန်တဲ့စိတ်တွေရော<br>
-                ဒီလောက်ဆိုရင် အလှတရားဟာ<br>
-                ဝိုင်းတယ်လို့ ကျုပ်ယုံပြီ<br>
-                <br>20.11.2023<br>
+                အရာရာမှာ ချွင်းချက်ဆိုတာရှိစမြဲ
+                အဲ့အရာ(ချွင်းချက်)က ဘယ်လောက်ခိုင်ခံတဲ့တံတိုင်းကိုမဆို ဖြိုနိုင်တယ်
+                အဲ့တာကြောင့် ကျုပ်လည်း ကျုပ်တို့အချစ်ရေးမှာ ချွင်းချက်တစ်ခုထားလိုက်တယ်
+
+                အဲ့တာ ကျုပ်ရဲ့အချစ်တွေပဲ
+                ခင်ဗျားတို့ပြောတဲ့ ချွင်းချက်တွေနဲ့ကြုံလာရင် ..
+                ကျုပ်ရဲ့ချွင်းချက်ဖြစ်တဲ့အချစ်ဟာဖြေရှင်းလိမ့်မယ်
+                အဲ့လိုနည်းနဲ့ ကျုပ်က မဖြိုဖျက်နိုင်တဲ့ တံတိုင်းကိုဆောက်မှာ
+                <br>23.11.2023<br>
             </div>
         </div>
+
+
+
 
         <!-- Add more notes here -->
     </div>
