--- a/ourpic.html
+++ b/ourpic.html
@@ -11,6 +11,15 @@
 
 <body>
     <div class="image-container">
+
+        <div class="image-item"><img src="img/Ours/CouplePic_a.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_b.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_c.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_dpng"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_e.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_f.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_g.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_h.png"></div>
         <div class="image-item"><img src="img/Ours/CouplePic_1.jpg"></div>
         <div class="image-item"><img src="img/Ours/CouplePic_2.jpg"></div>
         <div class="image-item"><img src="img/Ours/CouplePic_3.jpg"></div>
@@ -101,6 +110,23 @@
         <div class="image-item"><img src="img/Ours/CouplePic_89.jpg"></div>
         <div class="image-item"><img src="img/Ours/CouplePic_86.jpg"></div>
         <div class="image-item"><img src="img/Ours/CouplePic_90.jpg"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_91.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_92.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_93.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_94.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_95.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_96.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_97.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_98.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_99.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_100.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_101.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_102.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_103.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_104.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_105.png"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_106.png"></div>
+
 
     </div>
 </body>
