--- a/her_album.html
+++ b/her_album.html
@@ -11,6 +11,27 @@
 
 <body>
     <div class="image-container">
+
+        <div class="image-item"><img src="img/hers/hers_a.png"></div>
+        <div class="image-item"><img src="img/hers/hers_b.png"></div>
+        <div class="image-item"><img src="img/hers/hers_c.png"></div>
+        <div class="image-item"><img src="img/hers/hers_d.png"></div>
+        <div class="image-item"><img src="img/hers/hers_e.png"></div>
+        <div class="image-item"><img src="img/hers/hers_f.png"></div>
+        <div class="image-item"><img src="img/hers/hers_g.png"></div>
+        <div class="image-item"><img src="img/hers/hers_h.png"></div>
+        <div class="image-item"><img src="img/hers/hers_i.png"></div>
+        <div class="image-item"><img src="img/hers/hers_j.png"></div>
+        <div class="image-item"><img src="img/hers/hers_k.png"></div>
+        <div class="image-item"><img src="img/hers/hers_l.png"></div>
+        <div class="image-item"><img src="img/hers/hers_m.png"></div>
+        <div class="image-item"><img src="img/hers/hers_n.png"></div>
+        <div class="image-item"><img src="img/hers/hers_o.png"></div>
+        <div class="image-item"><img src="img/hers/hers_p.png"></div>
+        <div class="image-item"><img src="img/hers/hers_q.png"></div>
+        <div class="image-item"><img src="img/hers/hers_r.png"></div>
+        <div class="image-item"><img src="img/hers/hers_s.png"></div>
+
         <div class="image-item"><img src="img/hers/hers_1.jpg"></div>
         <div class="image-item"><img src="img/hers/hers_2.jpg"></div>
         <div class="image-item"><img src="img/hers/hers_3.jpg"></div>
