--- a/her_album.html
+++ b/her_album.html
@@ -11,7 +11,9 @@
 
 <body>
     <div class="image-container">
-
+        <div class="image-item"><img src="img/hers/hers_a1.jpg"></div>
+        <div class="image-item"><img src="img/hers/hers_a2.jpg"></div>
+        <div class="image-item"><img src="img/hers/hers_a3.jpg"></div>
         <div class="image-item"><img src="img/hers/hers_a.png"></div>
         <div class="image-item"><img src="img/hers/hers_b.png"></div>
         <div class="image-item"><img src="img/hers/hers_c.png"></div>
