--- a/mypic.html
+++ b/mypic.html
@@ -11,6 +11,15 @@
 
 <body>
     <div class="image-container">
+        <div class="image-item"><img src="img/Mine/mypic_a1.png"></div>
+        <div class="image-item"><img src="img/Mine/mypic_a2.png"></div>
+        <div class="image-item"><img src="img/Mine/mypic_a3.png"></div>
+        <div class="image-item"><img src="img/Mine/mypic_a4.png"></div>
+        <div class="image-item"><img src="img/Mine/mypic_a5.png"></div>
+        <div class="image-item"><img src="img/Mine/mypic_a6.png"></div>
+        <div class="image-item"><img src="img/Mine/mypic_a7.png"></div>
+
+        
         <div class="image-item"><img src="img/Mine/mypic_1.jpg"></div>
         <div class="image-item"><img src="img/Mine/mypic_2.jpg"></div>
         <div class="image-item"><img src="img/Mine/mypic_3.jpg"></div>
