--- a/ourpic.html
+++ b/ourpic.html
@@ -12,6 +12,17 @@
 <body>
     <div class="image-container">
 
+        <div class="image-item"><img src="img/Ours/CouplePic_a1.jpg"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_a2.jpg"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_a3.jpg"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_a4.jpg"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_a5.jpg"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_a6.jpg"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_a7.jpg"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_a8.jpg"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_a11.jpg"></div>
+        <div class="image-item"><img src="img/Ours/CouplePic_a12.png"></div>
+        
         <div class="image-item"><img src="img/Ours/CouplePic_a.png"></div>
         <div class="image-item"><img src="img/Ours/CouplePic_b.png"></div>
         <div class="image-item"><img src="img/Ours/CouplePic_c.png"></div>
