--- a/counter.html
+++ b/counter.html
@@ -14,6 +14,7 @@
     <div id="content">
         <h2 id="together">We have been together</h2>
         <div id="timer">
+            <b id="y">00</b> Year
             <b id="m">00</b> Months
             <b id="d">00</b> Days
             <b id="h">00</b> Hours
