--- a/home2.html
+++ b/home2.html
@@ -14,6 +14,6 @@
   </div>
 </div>
 <script src="home2.js"></script>
-<script src="script.js"></script>
+<script src="counter.js"></script>
 </body>
 </html>
